[package]
name = "holderplace"
version = "0.1.1"
edition = "2024"
description = "A simple and fast command-line tool for generating placeholder images."
license = "MIT"
repository = "https://github.com/detj/holderplace"
homepage = "https://github.com/detj/holderplace"
documentation = "https://docs.rs/holderplace"
keywords = ["placeholder", "image", "cli"]
categories = ["graphics", "command-line-utilities"]

[dependencies]
image = "0.25"
imageproc = "0.25"
webp = "0.3"
clap = { version = "4", features = ["derive"] }
ab_glyph = "0.2.31"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
